--- a/pom.xml
+++ b/pom.xml
@@ -191,22 +191,39 @@
 
   <build>
     <plugins>
-      <!-- run-example.sh invokes this plugin to launch an example. -->
       <plugin>
-        <groupId>kr.motd.maven</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.6</version>
         <configuration>
-          <executable>${java.home}/bin/java</executable>
-          <commandlineArgs>
-            ${argLine.common}
-            ${argLine.alpnAgent}
-            -classpath %classpath
-            ${argLine.leak}
-            ${argLine.coverage}
-            <!--${argLine.example}-->
-            <!--${exampleClass}-->
-          </commandlineArgs>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>lib/</classpathPrefix>
+              <mainClass>io.netty.example.http.websocketx.server.WebSocketServerSSL</mainClass>
+            </manifest>
+          </archive>
+
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>copy-dependencies</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}/lib</outputDirectory>
+              <overWriteReleases>false</overWriteReleases>
+              <overWriteSnapshots>false</overWriteSnapshots>
+              <overWriteIfNewer>true</overWriteIfNewer>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
