--- a/src/main/resources/downparameter.properties
+++ b/src/main/resources/downparameter.properties
@@ -1,10 +1,10 @@
 #服务器证书及密码，证书完整路径
-rootKeyStorePath=/Users/aRi/Downloads/netty-4.1/example/opensslcert/root.p12
+rootKeyStorePath=/root/opensslcert/root.p12
 rootCertificatePassword=handwin1
 #serverKeyStorePath=/Users/aRi/Downloads/wsscert/sChat.jks
 #serverKeyStorePath=/root/wsscert/sChat.jks
-serverKeyStorePath=/Users/aRi/Downloads/netty-4.1/example/opensslcert/server.p12
-#serverKeyStorePath=/root/opensslcert/server.p12
+#serverKeyStorePath=/Users/aRi/Downloads/netty-4.1/example/opensslcert/server.p12
+serverKeyStorePath=/root/opensslcert/server.p12
 serverCertificatePassword=handwin1
 #客户端证书及密码
 clientKeyStorePath=/root/opensslcert/client.p12
@@ -12,10 +12,10 @@ clientCertificatePassword=handwin1
 #wss启动端口
 wssServicePort=9994
 #wss功能控制参数
-websocketPath=/upload
+websocketPath=/download
 #kafka broker地址
 #bootStrapServers=192.168.1.108:9092
-bootStrapServers=localhost:9092
+bootStrapServers=192.168.1.108:9092
 #kakfa topic
 #topic=test1205
 topic=test-mzj
