--- a/src/main/resources/parameter.properties
+++ b/src/main/resources/parameter.properties
@@ -1,11 +1,15 @@
 #服务器证书及密码，证书完整路径
-rootKeyStorePath=/Users/aRi/Downloads/netty-4.1/example/opensslcert/root.p12
+rootKeyStorePath=/Users/aRi/Downloads/netty-4.1/example/opensslcert/client.p12
+#rootKeyStorePath=/Users/aRi/Downloads/netty-4.1/example/wscert/root.truststore
 rootCertificatePassword=handwin1
+#rootCertificatePassword=123456
 #serverKeyStorePath=/Users/aRi/Downloads/wsscert/sChat.jks
 #serverKeyStorePath=/root/wsscert/sChat.jks
 serverKeyStorePath=/Users/aRi/Downloads/netty-4.1/example/opensslcert/server.p12
+#serverKeyStorePath=/Users/aRi/Downloads/netty-4.1/example/wscert/server.keystore
 #serverKeyStorePath=/root/opensslcert/server.p12
 serverCertificatePassword=handwin1
+#serverCertificatePassword=123456
 #客户端证书及密码
 clientKeyStorePath=/root/opensslcert/client.p12
 clientCertificatePassword=handwin1
@@ -17,5 +21,5 @@ websocketPath=/upload
 #bootStrapServers=192.168.1.108:9092
 bootStrapServers=localhost:9092
 #kakfa topic
-#topic=test1205
-topic=test-mzj
+topic=test1205
+#topic=test-mzj
