--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,16 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.62</version>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.13</version>
+    </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+      <version>1.1.16</version>
+    </dependency>
   </dependencies>
 
   <build>
