--- a/src/main/resources/druid.properties
+++ b/src/main/resources/druid.properties
@@ -1,14 +1,13 @@
-datasource.mysql.url=jdbc:mysql://39.107.234.35:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-datasource.mysql.username=root
-datasource.mysql.password=KAz&ZK%Cv2w6
-
-druid.initialSize=5
-druid.minIdle=5
-druid.maxActive=20
-druid.maxWait=60000
-druid.timeBetweenEvictionRunsMillis=60000
-druid.minEvictableIdleTimeMillis=300000
-druid.validationQuery=SELECT 1
-druid.testWhileIdle=true
-druid.testOnBorrow=true
-druid.testOnReturn=false
+url=jdbc:mysql://39.107.234.35:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+username=root
+password=KAz&ZK%Cv2w6
+initialSize=5
+minIdle=5
+maxActive=20
+maxWait=60000
+timeBetweenEvictionRunsMillis=60000
+minEvictableIdleTimeMillis=300000
+validationQuery=SELECT 1
+testWhileIdle=true
+testOnBorrow=true
+testOnReturn=false
