--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,11 @@
       <artifactId>druid</artifactId>
       <version>1.1.16</version>
     </dependency>
+    <dependency>
+      <groupId>commons-dbutils</groupId>
+      <artifactId>commons-dbutils</artifactId>
+      <version>1.7</version>
+    </dependency>
   </dependencies>
 
   <build>
