redis配置修改；下拉服务端口修改；

--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -1,6 +1,9 @@
-hostName=127.0.0.1
+hostName=192.168.1.109
 port=6379
-password=
+password=14b5b8584cc0fde208b9329f172acb4b
+#hostName=127.0.0.1
+#port=6379
+#password=
 # 连接超时时间
 timeout=2000
 #数据库模式是16个数据库 0~15
